--- a/.gitignore
+++ b/.gitignore
@@ -578,3 +578,18 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,react,rider,webstorm
 **/appsettings.Development.json
+
+**/bin/
+**/obj/
+**/.vs/
+**/*/.user
+
+**/node_modules/
+**/dist/
+**/build/
+**/.env.local
+
+**/*.log
+
+.vscode/
+.idea/
