configure appsettings.json

--- a/backend/InventorySystem.Api/InventorySystem.Api/appsettings.json
+++ b/backend/InventorySystem.Api/InventorySystem.Api/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost; Port=5432; Database=inventorydb; Username=postgres; Password=PasswordForPostgres",
+    "Redis": "localhost:6379"
+  },
+  "Jwt":{
+    "Secret": "f7h387hf8whf8w3f0qfnes8G*HE(F#h3wt9*hfH**FH08943wghaf8AH*",
+    "Issuer": "InventorySystem",
+    "Audience": "InventorySystem",
+    "ExpirationMinutes": 1440,
+    "AdminExiprationMinutes": 480
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
