--- a/backend/InventorySystem.Api/InventorySystem.Api/InventorySystem.Api.csproj
+++ b/backend/InventorySystem.Api/InventorySystem.Api/InventorySystem.Api.csproj
@@ -21,4 +21,8 @@
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
 </Project>
